[project]
name = "air-01-web"
version = "0.1.0"
description = "IT Salary Calculator based on JetBrains Developer Ecosystem Survey 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "streamlit>=1.46.0",
    "uvicorn>=0.32.1",
    "requests>=2.32.0",
    "plotly>=5.24.0",
    "pydantic>=2.10.4",
    "watchdog>=6.0.0",
]

[project.scripts]
air-01-web = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend", "shared"]
